<resources>
    <string name="app_name">RelativeLayoutMaterial</string>
    <string name="txvMonument">Catedral</string>
    <string name="txvDateVisit">Fecha Visita</string>
    <string name="txvTypeVisit">Tipo Entrada</string>
    <string name="btnReserved">Reservar</string>
    <string name="btnBuy">Comprar</string>
    <string name="imgvCityDescription">Catedral de Málaga</string>
    <string name="imgvFavoritesDescription">Favoritos</string>
</resources>
